[package]
name = "sicompass-webbrowser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Sicompass web browser provider"

[dependencies]
sicompass-sdk = { workspace = true }
chromiumoxide = "0.9"
futures = "0.3"
which = "7"
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
